<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.src.longtimeclickevent.MainActivity"
    tools:showIn="@layout/activity_main">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/idNombreIntroducido"
                android:hint="@string/nombre"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/idTelefono"
                android:inputType="phone"
                android:hint="@string/addPhone"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agregar"
                    android:id="@+id/button"
                    android:onClick="addContact"/>

                <TextView
                    android:layout_width="283dp"
                    android:layout_height="63dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/idNombre"/>

            </LinearLayout>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/idLista"/>

        </LinearLayout>
</RelativeLayout>
